# cognitive-biases-endogenous-volatility

./: .gitignore  CPT_vs_NOCPT.ipynb  CorrelationComparison.ipynb  DHS_Analysis.ipynb  DominantFrequency.ipynb  Dominant_Amplitude_Sensitivity.ipynb  Dominant_Freq_Sensitivity.ipynb  Embedding.ipynb  LowHealthHighWealthResults.ipynb  PolicyDiff.ipynb  README.md  Sen_Welfare.ipynb  SensitivityAnalysis.ipynb  Shocks_Analysis.ipynb  Wealth_Health_Model.ipynb  compute_dominant_frequencies.py  compute_frequencies.py  compute_w_h_corr.py  experiment.py  experiment_parallel.py  experiment_slide.py  gamma_alpha.py  generate_initial_states.py  generate_parameter_sample.py  health_cost.ipynb  lambda_bifurcation.py  model.py  pyproject.toml  run_experiment.py  tests.py  utils.py  wealth_update.ipynb
notebooks/: attractors.ipynb  cpt_slide_experiment.ipynb  final_distributions.ipynb  frequency_amplitude_analysis.ipynb  gamma_alpha_experiment.ipynb  health_cost.ipynb  lambda_bifurcation_analysis.ipynb  probability_weight_comparison.ipynb  sen_welfare.ipynb  sensitivity.ipynb  sensitivity_analysis.ipynb  slide_experiment.ipynb  steady_state_comparison.ipynb  wealth_update.ipynb
old_notebooks/: Dominant_Amplitude_Sensitivity.ipynb  Dominant_Freq_Sensitivity.ipynb  Embedding.ipynb  LowHealthHighWealthResults.ipynb  PolicyDiff.ipynb  SensitivityAnalysis.ipynb  Wealth_Health_Model.ipynb
