[project]
name = "wealth-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alphashape>=1.3.1",
    "gudhi>=3.11.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pytest>=8.4.2",
    "ripser>=0.6.12",
    "salib>=1.5.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.0",
    "trajpy>=1.4.3",
    "tslearn>=0.6.4",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
